cleaned up swagger for part1 deployment
