# routes/admin.js
@@ -6,14 +6,24 @@ const validation = require("../middleware/validate");
 const {handleErrors} = require("../utilities/utilities");
 //const { isAuthenticated } = require('../middleware/authenticate');
 
-router.get("/", handleErrors(adminController.getAll));
+router.get("/", 
+    //#swagger.ignore = true
+    handleErrors(adminController.getAll));
 
-router.get("/:id", handleErrors(adminController.getSingle));
+router.get("/:id", 
+    //#swagger.ignore = true
+    handleErrors(adminController.getSingle));
 
-router.post("/", handleErrors(adminController.createAdmin));
+router.post("/", 
+    //#swagger.ignore = true
+    handleErrors(adminController.createAdmin));
 
-router.put("/:id", handleErrors(adminController.updateAdmin));
+router.put("/:id", 
+    //#swagger.ignore = true
+    handleErrors(adminController.updateAdmin));
 
-router.delete("/:id", handleErrors(adminController.deleteAdmin));
+router.delete("/:id", 
+    //#swagger.ignore = true
+    handleErrors(adminController.deleteAdmin));
 
 module.exports = router;
